# LiveMux

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: release.yml
crates/livemux-core/: Cargo.toml
crates/livemux-core/src/: batch.rs  constants.rs  error.rs  exiftool.rs  ffmpeg.rs  lib.rs  muxer.rs  samsung_tags.rs  utils.rs  xmp.rs
src/: cli.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AdbPushForm.tsx  DirForm.tsx  MuxForm.tsx
ui/src/components/ui/: sonner.tsx
ui/src/i18n/: en.json  index.ts  zh-TW.json
ui/src/types/: livemux.ts
