[package]
name = "livemux-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "livemux_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
livemux-core = { path = "../crates/livemux-core" }
