[package]
name = "livemux-core"
version.workspace = true
edition.workspace = true
description = "Core library for LiveMux — mux HEIC/JPG Live Photos into Motion Photos"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
regex = "1"
filetime = "0.2"
walkdir = "2"
memmap2 = "0.9"
